<resources>
    <string name="app_name">Run Fittnes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="user_wight">User Wight</string>
    <string name="welcome_to_run_fit_please_enter_your_name_and_wieght">Welcome to Run Fit Please Enter Your Name and Wieght</string>
    <string name="run_fit">Run Fit</string>
    <string name="user_wight_in_k_g">User Wight in k.g</string>
    <string name="sort_by">Sort By :</string>
    <string name="_00_00_00_00">00:00:00</string>
    <string name="cancle_tracking">Cancle tracking</string>
    <string name="finsh">Finsh</string>
    <string name="applay_changes">Applay Changes</string>
</resources>